# Montandon-Data-Fetching-Examples

./: .gitignore  README.md  pyproject.toml  requirements.txt
.binder/: README.md  environment.yml  postBuild
.github/workflows/: deploy-jupyterbook.yml
Analysis_montandon/: count_events_by_year.py  count_events_per_collection.py  example_3_optimized.py  example_5.py
book/: getting-started.md  intro.md  myst.yml
book/notebooks/: 02_Montandon_data_analysis.ipynb  05_Earthquakes_visualization.ipynb  06_Snow_Cold_Wave_Impact_Analysis.ipynb  07_cascading_impacts_analysis.ipynb  08_Queryables_Deep_Dive.ipynb  09_EMDAT_Impact_Analysis.ipynb  cold_wave_snow_storm_impacts_europe_central_asia.csv  floods_south_asia.csv
montandon_notebooks/: 01_Getting_Started_Montandon_STAC_API.ipynb  02_Montandon_data_analysis.ipynb  03_Recent_Cyclone_Tracking.ipynb  03_Time_Series_Analysis.ipynb  04_Earthquakes_visualization.ipynb  04_Recent_Cyclone_Tracking.ipynb  05_Earthquakes_visualization.ipynb  06_Snow_Cold_Wave_Impact_Analysis.ipynb  07_cascading_impacts_analysis.ipynb  08_Queryables_Deep_Dive.ipynb  COPY_TO_NOTEBOOK_GIF_GENERATOR.py  cold_wave_snow_storm_impacts_europe_central_asia.csv  cyclones_south_asia.csv  emdat-impacts-2020-deaths.csv  floods_south_asia.csv  gdacs_events_export.csv  gdacs_events_subset.csv  montandon_errors.md
